--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -11,12 +11,12 @@ abstract: |
   solvers rarely have to start from scratch when solving new problems. Instead,
   they start off with solutions that were discovered by a previous generation.
   Here we investigated the impact of starting off a problem solving task with a
-  partial solution discovered by someone else on future problem solving
-  performance. We found that teams of complementary problem solvers, who learned
-  different but complementary skills, outperformed equally skilled individuals
-  given the same total number of trials. The results illustrate how our system
-  of cultural inheritance can cumulatively improve problem solving performance
-  over generations beyond what would be achieved by individuals working alone.
+  solution discovered by someone else on future problem solving performance. We
+  found that teams of complementary problem solvers, who learned different but
+  complementary skills, outperformed equally skilled individuals given the same
+  total number of trials. The results illustrate how our system of cultural
+  inheritance can cumulatively improve problem solving performance over
+  generations beyond what would be achieved by individuals working alone.
 keywords: cultural evolution, problem solving, diachronic collaboration
 ---
 ```{r inherited-diversity-config, include=FALSE}
@@ -34,18 +34,20 @@ read_chunk(file.path(chunks_dir, "inherited-diversity.R"))
 
 One of the fundamental processes in cultural evolution is the transmission of
 problem solving knowledge from one generation to the next. Cultural
-transmission is notoriously imperfect when compared to genetic transmission.
-Yet the human ability to transmit cultural information far exceeds the
-abilities of any non-human animals. Humans have evolved a number of abilities
-that improve the success of cultural transmission, including teaching,
-language, and other social learning abilities, such as the ability to learn
-through observation. A consequence of our system of cultural inheritance is
-that problem solvers rarely have to start from scratch when solving new
-problems. Instead, they start off with the solutions that were inherited from
-a previous generation. A question that arises when considering the consequences
-of cultural transmission on human problem solving is the extent to which
-future generations are able to benefit from the solutions discovered by previous
-generations. The purpose of this research was to understand the conditions
+transmission is notoriously imperfect when compared to genetic transmission
+[@Sperber:1996exc; @Claidiere:2010kd]. Yet the human ability to transmit
+cultural information far exceeds the abilities of any non-human animals
+[@Tennie:2009gaa]. Humans have evolved a number of abilities that improve the
+success of cultural transmission, including imitation, teaching, and language
+[@Dean:2012gv]. A consequence of our system of cultural inheritance is that
+problem solvers rarely have to start from scratch when solving new problems.
+Instead, they start off with the solutions that were inherited from a previous
+generation. A question that arises when considering the consequences of
+cultural inheritance on human problem solving is the extent to which future
+generations are able to benefit from the solutions discovered by previous
+generations.
+
+The purpose of this research was to understand the conditions
 under which inheriting from a previous generation may improve future problem
 solving performance beyond what would be achieved by working alone.
 
