--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -7,17 +7,18 @@ output:
     includes:
       in_header: templates/header.tex
 abstract: |
-  One of the consequences of our system of cultural inheritance is that problem
-  solvers rarely have to start from scratch when solving new problems. Instead,
-  they start off with solutions that were discovered by a previous generation.
-  Here we investigated the impact of starting off a problem solving task with a
-  solution discovered by someone else on future problem solving performance. We
-  found that teams of complementary problem solvers, who learned different but
-  complementary skills, outperformed equally skilled individuals given the same
-  total number of trials. The results illustrate how our system of cultural
-  inheritance can cumulatively improve problem solving performance over
-  generations beyond what would be achieved by individuals working alone.
-keywords: cultural evolution, problem solving, diachronic collaboration
+  Humans have evolved a system of cultural inheritance that enables the
+  accumulation of problem solving knowledge over generations. As a consequence,
+  problem solvers rarely have to start from scratch when solving new problems.
+  Instead, they start off with solutions that were discovered by a previous
+  generation. Here we investigated the impact of inheritance---starting off
+  a problem solving task with a solution discovered by someone else---on
+  future problem solving performance. We found that teams of complementary problem
+  solvers, who learned different but complementary skills, outperformed equally
+  skilled individuals given the same total number of trials. These results
+  illustrate how our system of cultural inheritance can cumulatively improve
+  problem solving performance over generations beyond what would be achieved by
+  individuals working alone.
 ---
 ```{r inherited-diversity-config, include=FALSE}
 library(knitr)
@@ -39,13 +40,28 @@ transmission is notoriously imperfect when compared to genetic transmission
 cultural information far exceeds the abilities of any non-human animals
 [@Tennie:2009gaa]. Humans have evolved a number of abilities that improve the
 success of cultural transmission, including imitation, teaching, and language
-[@Dean:2012gv]. A consequence of our system of cultural inheritance is that
-problem solvers rarely have to start from scratch when solving new problems.
-Instead, they start off with the solutions that were inherited from a previous
-generation. A question that arises when considering the consequences of
-cultural inheritance on human problem solving is the extent to which future
-generations are able to benefit from the solutions discovered by previous
-generations.
+[@Lewis:2012jg; @Dean:2012gv]. As a result, problem solvers rarely have to
+start from scratch when solving new problems. Instead, they start off with the
+solutions that were inherited from a previous generation. What are the
+consequences of inheriting from a previous generation on future problem
+solving performance?
+
+The primary benefit to being able to inherit problem solving knowledge from
+a previous generation is believed to be that it gives future generations a head
+start on problem solving. Rather than each new generation striving to solve the
+same problems over and over again, future generations can save the time it
+would have taken to solve some problem on their own, and instead can spend
+their time solving new problems, not attempted by previous generations. As
+a result, cultural inheritance allows for problem solving to extend far longer
+than any individual lifetime. Over time, we have come to depend on this system
+of cultural inheritance to the point that human cultures are able to solve
+problems that no individual could attempt on their own [@Henrich:2015srt;
+@Boyd:2017diff].
+
+Importantly, on this view, cultural inheritance improves problem solving
+performance without affecting underlying problem solving ability. The inheritance
+of problem solving knowledge via social learning is identical to the same
+knowledge discovered via individual or asocial learning.
 
 The purpose of this research was to understand the conditions
 under which inheriting from a previous generation may improve future problem
